# LabIAGI_1950722

./: Introduction_to_colab_and_ML.ipynb  README.md
Esercitazione_1/: CMakeLists.txt
Esercitazione_1/build/: CMakeCache.txt
Esercitazione_1/src/: access_image.cpp  process_image.cpp  utils.cpp
Esercitazione_2/: .gitignore  CMakeLists.txt  README.md
Esercitazione_2/src/: filter_image.cpp  image.h  process_image.cpp  resize_image.cpp
Esercitazione_2/src/test/: test1.cpp
Esercitazione_3/: .gitignore  CMakeLists.txt  README.md  clean.sh  compile.sh
Esercitazione_3/src/: edge_detection.cpp  filter_image.cpp  image.h  process_image.cpp
Esercitazione_3/src/test/: test2.cpp
Esercitazione_4/: .gitignore  CMakeLists.txt  README.md
Esercitazione_4/interactive_visualization/: inliers  matches
Esercitazione_4/src/: edge_detection.cpp  filter_image.cpp  harris_image.cpp  image.h  panorama_image.cpp  process_image.cpp  resize_image.cpp
Esercitazione_4/src/opencv/: CMakeLists.txt  opencv_utils.cpp  opencv_utils.h  test_harris.cpp  test_inliers.cpp  test_matches.cpp  test_panorama.cpp
Esercitazione_5/: Copy_of_Introduction_to_colab_and_ML.ipynb  Introduction_to_colab_and_ML.ipynb  Introduction_to_colab_and_ML_1950722.ipynb  Linear_Regression.ipynb  Linear_Regression_1950722.ipynb  README.md
Esercitazione_6/: .gitignore  Exercise1.ipynb  Exercise1_1950722.ipynb  Exercise2.ipynb  Exercise2_1950722.ipynb  Exercise3.ipynb  Exercise3_1950722.ipynb  README.md
Esercitazione_6/data/: YearPredictionMSD.txt
Esercitazione_7/: .gitignore  Introduction_to_NeuralNetworks_using_PyTorch.ipynb  Introduction_to_NeuralNetworks_using_PyTorch_1950722.ipynb  Introduction_to_PyTorch.ipynb  Introduction_to_PyTorch_1950722.ipynb  MLP_CIFAR10_1950722.ipynb  MLP_FashionMNIST_1950722.ipynb  MLP_YearPredictionMSD_1950722.ipynb  MLP_field_test.ipynb  MLP_field_test_1950722.ipynb  README.md
Esercitazione_8/: .gitignore  CNN_The_Quick_Draw_1950722.ipynb  README.md
google_semantic_segmentation/: google_semantic_segmentation_1950722.ipynb
(+6 files in other folders)
